typescript/checker/tests/conformance/Symbols/ES5SymbolType1.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            21,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolType1.ts:2:5
  |
2 | var s: symbol;
  |     ^

